# OGAM-15-AntiHero

./: CMakeLists.txt  README.md
include/: audio.h  config.h  gamehelper.h
resources/buildscripts/linux/: debugOpenGL.sh  releaseOpenGL.sh
resources/buildscripts/windows/: debugOpenGL.bat  debugVulkan.bat  releaseOpenGL.bat  releaseVulkan.bat
resources/maps/: Environment.tsx  intro.tmx  level0.tmx  level1.cards  level1.tmx  level2.tmx  tempTileset.tsx  test.tmx  testNewTiles.cards  testNewTiles.tmx  tut1.tmx  tut2.tmx
resources/shaders/opengl/: flat.frag  flat.vert
resources/shaders/vulkan/: blinnphong-anim.frag  blinnphong-anim.frag.spv  blinnphong.frag  blinnphong.frag.spv  flat.frag  flat.frag.spv
resources/textures/spells/: Model-Constitution-22-23.docx
src/: app.cpp  app.h  camera.cpp  camera.h  renderer_include.h
src/game/: ##.#logic.cpp##  #logic.cpp#  #logic.h#  #player.cpp#  .#logic.cpp  .#logic.h  animation.cpp  animation.h  logic.cpp  logic.cpp~  logic.h  logic.h~  player.cpp  player.cpp~  player.h  player.h~  sprite.h
src/game/characters/: #enemy.h#  .#enemy.h  character.h  character.h~  enemy.h  hero.h  hero.h~  obstacle.h
src/game/controls/: button.h  spell_controls.cpp  spell_controls.cpp~  spell_controls.h
src/game/controls/card/: spell.h
src/game/god/: #stone.h#  stone.h  stone.h~
src/game/map/: map.h  map.h~  tiled.cpp  tiled.h  visual.cpp  visual.h
src/opengl-render/: render.cpp  render.h
src/opengl-render/resources/: texture_loader.cpp
src/vulkan-render/: render.cpp  render.h
src/vulkan-render/resources/: texture_loader.cpp  texture_loader.h
src/vulkan-render/resources/model/: model_loader.cpp  model_loader.h  model_render.h
